fix(security): use exec(String[]) array form to prevent command injection in browser launch calls (code ql findings)